# plllm-mlx

./: .gitignore  AGENTS.md  CHANGELOG.md  HISTORY.md  LICENSE  PLAN.md  README.md  config.yaml  main.py  pyproject.toml
.opencode/plans/: subprocess-isolation-plan-v3.md  subprocess-isolation-plan.md
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  EXAMPLES.md  KV_CACHE.md  MODELS.md  README.md
docs/cn/: API.md  ARCHITECTURE.md  CONFIGURATION.md  EXAMPLES.md  KV_CACHE.md  README.md
plllm_mlx/: __init__.py  cli.py  client.py  config.py  daemon.py  exceptions.py  logging_config.py
plllm_mlx/commands/: __init__.py  chat.py
plllm_mlx/helpers/: __init__.py  chain_cache.py  chat_helper.py  chunk_helper.py  clz_helper.py  host_helper.py  path_helper.py  response_helper.py  step_info.py  toolcall_helper.py
plllm_mlx/models/: __init__.py  base_step_processor.py  default_step_processor.py  gpt_oss_step_processor.py  gptoss_step_processor.py  kv_cache.py  local_models.py  mlx_loader.py  mlxvlm_loader.py  model_detector.py  model_loader.py  model_subprocess.py  openai_step_processor.py  process_manager.py  qwen3_thinking_step_processor.py  special_tokens.py  step_processor.py  thinking_step_processor.py
plllm_mlx/routers/: __init__.py  chat.py  loader.py  model_manager.py  models.py  stepprocessor.py
plllm_mlx/subprocess/: __init__.py  client.py  manager.py  proxy.py
plllm_mlx/subprocess/python/: __init__.py  loader.py  main.py  server.py  step_processor.py
plllm_mlx/subprocess/python/loaders/: __init__.py  mlx_loader.py  mlxvlm_loader.py
plllm_mlx/subprocess/python/stepps/: __init__.py  base_step_processor.py  gpt_oss_step_processor.py  thinking_step_processor.py
plllm_mlx/utils/: __init__.py
tests/: __init__.py  run_tests.sh
tests/integration/: common.sh  test_01_health.sh  test_02_model_list.sh  test_03_model_load_unload.sh  test_04_chat_api.sh  test_05_chat_cli.sh  test_06_full_flow.sh  test_07_subprocess.sh
tests/unit/: __init__.py  test_client.py  test_config.py  test_local_models.py  test_model_detector.py  test_utils.py
tests/unit/test_helpers/: test_chain_cache.py  test_chat_helper.py  test_chunk_helper.py  test_path_helper.py  test_step_info.py  test_toolcall_helper.py
