[project]
name = "plllm-mlx"
version = "1.6.0"
description = "Standalone MLX-based LLM inference service with OpenAI compatible API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "LittlePush", email = "littlepush@impush.cc" }
]
keywords = ["mlx", "llm", "inference", "openai", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx-lm>=0.9.0",
    "mlx-vlm",
    "transformers",
    "fastapi",
    "uvicorn",
    "pyyaml",
    "pydantic>=2.0.0",
    "sse-starlette",
    "psutil>=7.2.2",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]
vlm = [
    "torch",
    "torchvision",
]

[project.scripts]
plllm-mlx = "plllm_mlx.cli:main"
plx = "plllm_mlx.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plllm_mlx", "plllm_mlx.models", "plllm_mlx.routers", "plllm_mlx.helpers", "plllm_mlx.utils", "plllm_mlx.commands"]

[tool.setuptools.package-data]
plllm_mlx = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["plllm_mlx"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
